Moved CSS into CSS folder

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HACKRPI Website</title>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
@@ -12,16 +12,14 @@
     </div>
     <div id="content">
         <div id="main">
-            <h2>Description</h2>
-            <p>Login</p>
+            <h1>Login</h1>
         </div>
-
 
         <style scoped>
             .dropdown {
                 position: relative;
                 display: inline-block;
-                padding: 0;
+                padding: 0;  
                 10;
                 0;
                 10;
@@ -45,7 +43,7 @@
 
 
         <div id="footer">
-            Copyright &copy; 2016 Adam Rabinowitz
+            Copyright &copy; 2016 Adam, Eric, Lucas, Shashank
 
         </div>
     </div>
